<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.RestaurantDetails">

    <ImageView
        android:id="@+id/restaurant_details_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:largeHeap="true"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/restaurant_details_informations_contener"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/restaurant_details_image"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/restaurant_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <RatingBar
            android:id="@+id/restaurant_details_ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="3"
            android:isIndicator="true"
            android:theme="@style/RatingBar"
            app:layout_constraintBottom_toBottomOf="@+id/restaurant_details_name"
            app:layout_constraintStart_toEndOf="@+id/restaurant_details_name"
            />

        <TextView
            android:id="@+id/restaurant_details_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/restaurant_details_name"
            android:layout_alignStart="@+id/restaurant_details_name"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/restaurant_details_name"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_details_name"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/restaurant_details_contact_contener"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/restaurant_details_informations_contener"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_details_informations_contener">


        <ImageButton
            android:id="@+id/restaurant_details_call_imageView"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginEnd="80dp"
            android:background="@color/transparent"
            android:src="@drawable/ic_call_orange_30dp"
            app:layout_constraintBottom_toTopOf="@+id/restaurant_details_like_textView"
            app:layout_constraintEnd_toStartOf="@+id/restaurant_details_like_image"
            app:layout_constraintTop_toTopOf="@+id/restaurant_details_like_image"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/restaurant_details_call_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_button"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/restaurant_details_like_textView"
            app:layout_constraintEnd_toEndOf="@+id/restaurant_details_call_imageView"
            app:layout_constraintStart_toStartOf="@+id/restaurant_details_call_imageView"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_details_call_imageView" />

        <ImageButton
            android:id="@+id/restaurant_details_like_image"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_toEndOf="@+id/restaurant_details_call_imageView"
            android:background="@color/transparent"
            android:src="@drawable/ic_star_orange_30dp"
            app:layout_constraintBottom_toTopOf="@+id/restaurant_details_like_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/restaurant_details_like_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/like_button"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/restaurant_details_like_image"
            app:layout_constraintStart_toStartOf="@+id/restaurant_details_like_image" />

        <ImageButton
            android:id="@+id/restaurant_details_website_image"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@color/transparent"
            android:src="@drawable/ic_public_orange_30dp"
            android:layout_marginStart="80dp"
            app:layout_constraintBottom_toBottomOf="@+id/restaurant_details_like_image"
            app:layout_constraintStart_toEndOf="@+id/restaurant_details_like_image"
            app:layout_constraintTop_toTopOf="@+id/restaurant_details_like_image"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/restaurant_details_website_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website_button"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/restaurant_details_like_textView"
            app:layout_constraintEnd_toEndOf="@+id/restaurant_details_website_image"
            app:layout_constraintStart_toStartOf="@+id/restaurant_details_website_image"
            app:layout_constraintTop_toTopOf="@+id/restaurant_details_like_textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/restaurant_details_frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/restaurant_details_contact_contener"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_details_contact_contener" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/restaurant_details_subscribe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/restaurant_details_image"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="-28dp"
        android:src="@drawable/ic_add_white_24dp"
        app:rippleColor="@color/grey"
        app:useCompatPadding="false"
        app:fabSize="auto"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>